--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1331,13 +1331,17 @@ Our platform will center around secure, efficient, and scalable communication pr
             \item \textbf{Rate Limiting \& Throttling:} To mitigate abuse, API endpoints will implement rate limiting and request throttling.
         \end{itemize}
         
-    \item Backend Infrastructure and AWS Communication:
+        \item Backend Infrastructure and AWS Communication:
 
         \textbf{AWS Hosting:} The backend services will be deployed on AWS, taking advantage of its scalable infrastructure and regional availability to reduce latency and increase reliability.
         
         \textbf{Microservices \& API Gateway}: We may structure the backend as microservices behind an API Gateway to manage routing, authentication, and rate limiting more efficiently.
 
         \textbf{AWS Database Connectivity:} The backend will communicate with AWS-hosted databases (Amazon RDS) via secure connections using AWS SDKs or native drivers over HTTPS or proprietary secured protocols.
+        \begin{itemize}
+            \item \textbf{Secure Credential Management:} Database credentials and API keys will be stored securely using AWS Secrets Manager or IAM roles.
+            \item \textbf{Network Isolation:} Databases will be deployed within private subnets, accessible only through strict security group rules.
+        \end{itemize}
 \end{enumerate}
 
 
