--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1245,36 +1245,36 @@ The following hierarchy is represented as a directed acyclic graph, with arrows 
   Labeller Expertise Calculator & N/A & Provides algorithms \\ \hline
   Image Mask Service & N/A & Provides algorithms \\ \hline
   Image Selection Service & N/A & Provides algorithms \\ \hline
-  \end{longtable}
+\end{longtable}
 
-
-  \begin{figure}[H]
+% figs
+    \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{Analysis_Class_Diagram_Model.png}
     \caption{ML Model}
     \label{FigUH}
-  \end{figure}
+    \end{figure}
 
-  \begin{figure}[H]
+    \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{project_stats.png}
     \caption{Project selection}
     \label{FigUH}
-  \end{figure}
-  
-  \begin{figure}[H]
+    \end{figure}
+
+    \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{labelling_model.png}
     \caption{Labelling model}
     \label{FigUH}
-  \end{figure}
+    \end{figure}
 
-  \begin{figure}[H]
+    \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{ui_interfaces.png}
     \caption{UI interfaces}
     \label{FigUH}
-  \end{figure}
+    \end{figure}
 
 %\section*{References}
 
