Final report metrics updated

--- a/docs/projMngmnt/Final_Team_Contrib.tex
+++ b/docs/projMngmnt/Final_Team_Contrib.tex
@@ -20,160 +20,339 @@
 
 This document summarizes the contributions of each team member for the final
 demonstration and documentation.  The time period of interest is the time
-between Rev 0 and the Final documentation.
+between Rev 0 and the Final documentation. Specifically, between Feb 3rd and March 26th. We also include a summary of all contributions to the project for completeness.
+
 
 \section{Team Meeting Attendance}
 
-\wss{For each team member how many team meetings have they attended over the
-time period of interest.  This number should be determined from the meeting
-issues in the team's repo.  The first entry in the table should be the total
-number of team meetings held by the team.}
+% \wss{For each team member how many team meetings have they attended over the
+% time period of interest.  This number should be determined from the meeting
+% issues in the team's repo.  The first entry in the table should be the total
+% number of team meetings held by the team.}
+
 
 \begin{table}[H]
 \centering
+\textbf{Rev0 to Final}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 6\\
+Kartik & 5\\
+Kyle & 6\\
+Mathew & 6\\
+Oleg & 5\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
+
+\begin{table}[H]
+\centering
+\textbf{Entire Project}\\
+\begin{tabular}{ll}
+\toprule
+\textbf{Student} & \textbf{Meetings}\\
+\midrule
+Total & 21\\
+Kartik & 19\\
+Kyle & 21\\
+Mathew & 21\\
+Oleg & 18\\
+\bottomrule
+\end{tabular}
+\end{table}
+
+
+% \wss{If needed, an explanation for the counts can be provided here.}
 
 \section{Supervisor/Stakeholder Meeting Attendance}
 
-\wss{For each team member how many supervisor/stakeholder team meetings have
-they attended over the time period of interest.  This number should be determined
-from the supervisor meeting issues in the team's repo.  The first entry in the
-table should be the total number of supervisor and team meetings held by the
-team.  If there is no supervisor, there will usually be meetings with
-stakeholders (potential users) that can serve a similar purpose.}
+% \wss{For each team member how many supervisor/stakeholder team meetings have
+% they attended over the time period of interest.  This number should be determined
+% from the supervisor meeting issues in the team's repo.  The first entry in the
+% table should be the total number of supervisor and team meetings held by the
+% team.  If there is no supervisor, there will usually be meetings with
+% stakeholders (potential users) that can serve a similar purpose.}
+
+
+\begin{table}[H]
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Meetings}\\
+    \midrule
+    Total  & 0\\
+    Kartik & 0\\
+    Kyle   & 0\\
+    Mathew & 0\\
+    Oleg   & 0\\
+\bottomrule
+\end{tabular}
+\end{table}
+
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total  & 2\\
+Kartik & 2\\
+Kyle   & 2\\
+Mathew & 2\\
+Oleg   & 2\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
-
+% \wss{If needed, an explanation for the counts can be provided here.}
+No suitable time could be found to meet during week of March 24th, when the team had hoped to provide a presentation of the final project.
 \section{Lecture Attendance}
 
-\wss{For each team member how many lectures have they attended over the time
-period of interest.  This number should be determined from the lecture issues in
-the team's repo.  The first entry in the table should be the total number of
-lectures since the beginning of the term.}
+% \wss{For each team member how many lectures have they attended over the time
+% period of interest.  This number should be determined from the lecture issues in
+% the team's repo.  The first entry in the table should be the total number of
+% lectures since the beginning of the term.}
+
+
+
+\begin{table}[H]
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Lectures}\\
+    \midrule
+    Total & 1\\
+    Kartik & 1\\
+    Kyle   & 1\\
+    Mathew & 0\\
+    Oleg   & 0\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
 \textbf{Student} & \textbf{Lectures}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 13\\
+Kartik & 8\\
+Kyle   & 11\\
+Mathew & 11\\
+Oleg   & 9\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the lecture attendance can be provided here.}
+% \wss{If needed, an explanation for the lecture attendance can be provided here.}
 
 \section{TA Document Discussion Attendance}
 
-\wss{For each team member how many of the informal document discussion meetings
-with the TA were attended over the time period of interest.}
+% \wss{For each team member how many of the informal document discussion meetings
+% with the TA were attended over the time period of interest.}
+
+\begin{table}[H]
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{ll}
+    \toprule
+    \textbf{Student} & \textbf{Meetings}\\
+    \midrule
+    Total & 1\\
+    Kartik & 1\\
+    Kyle   & 1\\
+    Mathew & 1\\
+    Oleg   & 0\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
 
 \begin{table}[H]
 \centering
+\textbf{Entire Project}\\
 \begin{tabular}{ll}
 \toprule
-\textbf{Student} & \textbf{Lectures}\\
+\textbf{Student} & \textbf{Meetings}\\
 \midrule
-Total & Num\\
-Name 1 & Num\\
-Name 2 & Num\\
-Name 3 & Num\\
-Name 4 & Num\\
-Name 5 & Num\\
+Total & 5\\
+Kartik & 3\\
+Kyle   & 5\\
+Mathew & 5\\
+Oleg   & 4\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the attendance can be provided here.}
+% \wss{If needed, an explanation for the attendance can be provided here.}
 
 \section{Commits}
 
-\wss{For each team member how many commits to the main branch have been made
-over the time period of interest.  The total is the total number of commits for
-the entire team since the beginning of the term.  The percentage is the
-percentage of the total commits made by each team member.}
-
+% \wss{For each team member how many commits to the main branch have been made
+% over the time period of interest.  The total is the total number of commits for
+% the entire team since the beginning of the term.  The percentage is the
+% percentage of the total commits made by each team member.}
+We have 4 repositories, Main, where the docs are stored, Front end (FE), backend (BE), and the computer vision model.
 \begin{table}[H]
-\centering
-\begin{tabular}{lll}
-\toprule
-\textbf{Student} & \textbf{Commits} & \textbf{Percent}\\
-\midrule
-Total & Num & 100\% \\
-Name 1 & Num & \% \\
-Name 2 & Num & \% \\
-Name 3 & Num & \% \\
-Name 4 & Num & \% \\
-Name 5 & Num & \% \\
-\bottomrule
-\end{tabular}
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{lllllll}
+    \toprule
+    \textbf{Student} & \textbf{Commits Main} & \textbf{FE} & \textbf{BE} & \textbf{Model} & \textbf{Total}& \textbf{Percent}\\
+    \midrule
+    Total & 50 & 29 & 45 & 0 & 124 & 100\% \\
+    Kartik & 5 & 4 & 0 & 0 & 9 & 7\%\\
+    Kyle   & 23 & 4 & 32 & 0 & 59 & 48\%\\
+    Mathew & 10 & 20 & 3 & 0 & 33 & 27\% \\
+    Oleg   & 12 &  1 & 10 & 0 & 23 & 19\% \\
+    \bottomrule
+    \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.  For
-instance, if a team member has more commits to unmerged branches, these numbers
-can be provided here.  If multiple people contribute to a commit, git allows for
-multi-author commits.}
+\begin{table}[H]
+    \centering
+    \textbf{Entire Project}\\
+    \begin{tabular}{lllllll}
+    \toprule
+    \textbf{Student} & \textbf{Commits Main} & \textbf{FE} & \textbf{BE} & \textbf{Model} & \textbf{Total}& \textbf{Percent}\\
+    \midrule
+    Total & 418 & 89 & 91 & 10 & 608 & 100\% \\
+    Kartik & 74 & 4 & 0 & 7 & 85 & 14\%\\
+    Kyle   & 199 & 7 & 56 & 0 & 262 & 43\%\\
+    Mathew & 86 & 75 & 11 & 0 & 172 & 28\% \\
+    Oleg   & 59 &  3 & 24 & 3 & 89 & 15\% \\
+    \bottomrule
+    \end{tabular}
+\end{table}
 
-\section{Issue Tracker}
+% \wss{If needed, an explanation for the counts can be provided here.  For
+% instance, if a team member has more commits to unmerged branches, these numbers
+% can be provided here.  If multiple people contribute to a commit, git allows for
+% multi-author commits.}
 
-\wss{For each team member how many issues have they authored (including open and
-closed issues (O+C)) and how many have they been assigned (only counting closed
-issues (C only)) over the time period of interest.}
 
+% \wss{For each team member how many issues have they authored (including open and
+% closed issues (O+C)) and how many have they been assigned (only counting closed
+% issues (C only)) over the time period of interest.}
+
+\section{Issues} 
 \begin{table}[H]
 \centering
+\textbf{Rev0 to Final}\\
 \begin{tabular}{lll}
 \toprule
 \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
 \midrule
-Name 1 & Num & Num \\
-Name 2 & Num & Num \\
-Name 3 & Num & Num \\
-Name 4 & Num & Num \\
-Name 5 & Num & Num \\
+Total & 47 & 34 \\
+Kartik & 11 & 4\\
+Kyle   & 19 & 13\\
+Mathew & 13 & 12\\
+Oleg   & 4 & 5\\
 \bottomrule
 \end{tabular}
 \end{table}
 
-\wss{If needed, an explanation for the counts can be provided here.}
 
-\wss{If your team has additional metrics of productivity, please feel free to
-add them to this report.}
+\begin{table}[H]
+\centering
+\textbf{Entire Project}\\
+\begin{tabular}{lll}
+\toprule
+\textbf{Student} & \textbf{Authored (O+C)} & \textbf{Assigned (C only)}\\
+\midrule
+Total & 214 & 170 \\
+Kartik & 21 & 23\\
+Kyle   & 99 & 55\\
+Mathew & 62 & 56\\
+Oleg   & 32 & 36\\
+\bottomrule
+\end{tabular}
+\end{table}
 
+% \wss{If needed, an explanation for the counts can be provided here.}
+
+% \wss{If your team has additional metrics of productivity, please feel free to
+% add them to this report.}
+\section{Additional Metrics}
+Number of Pull requests reviewed:
+
+
+\begin{table}[H]
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{llll}
+    \toprule
+    \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Reviewed} & \textbf{Peer's Reviewed}\\
+    \midrule
+    Total & 41 & 16 & \\
+    Kartik & 7 & 2 & 1\\
+    Kyle   & 12 & 9 & 8\\
+    Mathew & 18 & 4 & 4\\
+    Oleg   & 4 & 1 & 1\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
+
+\begin{table}[H]
+    \centering
+    \textbf{Entire Project}\\
+    \begin{tabular}{llll}
+    \toprule
+    \textbf{Student} & \textbf{Authored (O+C)} & \textbf{Reviewed} & \textbf{Peer's Reviewed}\\
+    \midrule
+    Total & 183 & 92 & \\
+    Kartik & 26 & 10 & 7\\
+    Kyle   & 52 & 43 & 37\\
+    Mathew & 74 & 36 & 36\\
+    Oleg   & 31 & 3 & 1\\
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
+Peer review feedback for team 17:
+
+\begin{table}[H]
+    \centering
+    \textbf{Rev0 to Final}\\
+    \begin{tabular}{lll}
+    \toprule
+    \textbf{Student} & \textbf{Authored (O+C)}\\
+    \midrule
+    Total & 3\\
+    Kartik & 0\\
+    Kyle   & 0 \\
+    Mathew & 3 \\
+    Oleg   & 0 \\
+    
+    \bottomrule
+    \end{tabular}
+    \end{table}
+
+
+    \begin{table}[H]
+        \centering
+        \textbf{Entire Project}\\
+        \begin{tabular}{lll}
+        \toprule
+        \textbf{Student} & \textbf{Authored (O+C)}\\
+        \midrule
+        Total & 25\\
+        Kartik & 0\\
+        Kyle   & 6 \\
+        Mathew & 19 \\
+        Oleg   & 0 \\
+        
+        \bottomrule
+        \end{tabular}
+        \end{table}
 \end{document}
