--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -217,6 +217,12 @@ Satellite Image Request
 Project Creation Interface
 \item [\refstepcounter{mnum} \mthemnum \label{pcc}:]
 Project Creation Controller
+
+\item [\refstepcounter{mnum} \mthemnum \label{tci}:]
+Tile Creation Interface
+\item [\refstepcounter{mnum} \mthemnum \label{tcc}:]
+Tile Creation Controller
+
 \item [\refstepcounter{mnum} \mthemnum \label{project}:]
 Project
 \item [\refstepcounter{mnum} \mthemnum \label{srfi}:]
@@ -389,6 +395,8 @@ Report Manager
    & CrossValidation Evaluation\\
    & ModelTrainingService\\
    & ModelEvaluationService\\
+   & Tile Creation Interface\\
+   & Tile Creation Controller\\
   \bottomrule
   \end{tabular}
   \caption{Module Hierarchy}
