--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -850,6 +850,24 @@ to be implemented.
 \item[Type of Module:] Abstract Object
 \end{description}
 
+\subsubsection{Tile Creation Interface (\mref{tci})}
+
+\begin{description}
+\item[Secrets:] Tile creation algorithms and related tools.
+\item[Services:] Provides a user interface for creating tiles.
+\item[Implemented By:] OrbitWatch
+\item[Type of Module:] Abstract Object
+\end{description}
+
+\subsubsection{Tile Creation Controller (\mref{tcc})}
+
+\begin{description}
+\item[Secrets:] Tile creation algorithms and related tools.
+\item[Services:] Validates incoming images and creates a new tiles in the database.
+\item[Implemented By:] OrbitWatch
+\item[Type of Module:] Abstract Object
+\end{description}
+
 \subsubsection{Report Controller (\mref{rc})}
 
 \begin{description}
