--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -217,12 +217,10 @@ Satellite Image Request
 Project Creation Interface
 \item [\refstepcounter{mnum} \mthemnum \label{pcc}:]
 Project Creation Controller
-
 \item [\refstepcounter{mnum} \mthemnum \label{tci}:]
 Tile Creation Interface
 \item [\refstepcounter{mnum} \mthemnum \label{tcc}:]
 Tile Creation Controller
-
 \item [\refstepcounter{mnum} \mthemnum \label{project}:]
 Project
 \item [\refstepcounter{mnum} \mthemnum \label{srfi}:]
@@ -1038,7 +1036,7 @@ requirements and between the modules and the anticipated changes.
   FR5 &  \mref{ri}, \mref{rc}, \mref{rm}, \mref{report}\\
   FR6 &  \mref{iui}, \mref{pm} \\
   FR7 &  \mref{siri}, \mref{sirc}, \mref{sirf}, \mref{pm} \\
-  FR8 &  \mref{srfi}, \mref{pm}\\
+  FR8 &  \mref{srfi}, \mref{pm}, \mref{tci}, \mref{tcc}\\
   FR9 & \mref{acc}, \mref{aci}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{client} \\
   FR10 & \mref{ac}, \mref{li}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{labeler} \\
   FR11 & \mref{ac}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{auc}, \mref{aui}, \mref{user}, \mref{client} \\
