--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1032,7 +1032,7 @@ requirements and between the modules and the anticipated changes.
   FR0 & \mref{acc}, \mref{aci}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{client} \\
   FR1 & \mref{ac}, \mref{li}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{user}, \mref{client} \\
   FR2 & \mref{ac}, \mref{at}, \mref{accdc}, \mref{accd}, \mref{auc}, \mref{aui}, \mref{user}, \mref{client} \\
-  FR4 &  \mref{pci}, \mref{pcc}, \mref{pm}\\
+  FR4 &  \mref{pci}, \mref{pcc}, \mref{pm}, \mref{tci}, \mref{tcc}\\
   FR5 &  \mref{ri}, \mref{rc}, \mref{rm}, \mref{report}\\
   FR6 &  \mref{iui}, \mref{pm} \\
   FR7 &  \mref{siri}, \mref{sirc}, \mref{sirf}, \mref{pm} \\
