--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -1066,7 +1066,7 @@ requirements and between the modules and the anticipated changes.
   OE5 &  \mref{ImageObject database}, \mref{ImageObject database connector}, \mref{modeltrainingservice}, \mref{modelevaluationservice}, \mref{modelmanager}, \mref{modelcreation}\\
   MR0 & Related to all modules \\
   SE0 & \mref{ac}, \mref{at}, \mref{lbli}, \mref{lblc}, \mref{psi}, \mref{psc} \\
-  SE1 & \mref{ac}, \mref{at}, \mref{pci}, \mref{pcc} \\
+  SE1 & \mref{ac}, \mref{at}, \mref{pci}, \mref{pcc}, \mref{tci}, \mref{tcc} \\
   SE2 & \mref{aci}, \mref{acc} \\
   SE3 & \mref{aci}, \mref{acc} \\
   SE4 & \mref{srfi} \\
